--- a/archived/services.html
+++ b/archived/services.html
@@ -13,7 +13,7 @@
     <script>
         function returnToHome(){
             alert('Da co loi xay ra, dua ban tro ve trang chu...');
-            window.location.href('../home.html')
+            window.location.href('./')
         }
     </script>
 </head>
