--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="./resources/jscript/autoHTTPS.js"></script>
+    <script>
+        alert("Thông báo: Hiện tại O2 Production đã chính thức ngừng tất cả hoạt động thương mại. Cảm ơn bạn đã đồng hành cùng O2 Production")
+    </script>
 </head>
 <body>
     <div class="container">
